Add: Basic Authorization with JWT, user logging
+ Authorised playback

--- a/BazaMuzyczna/appsettings.json
+++ b/BazaMuzyczna/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbConnection": "Host=localhost;Database=BazaMuzyczna;Username=porti;Password=porti"
+  },
+  "Jwt": {
+    "Key": "Baza-Muzyczna-Secret-Authorization-Key",
+    "Issuer": "http://localhost:7155",
+    "Audience": "http://localhost:7155",
+    "ExpireMinutes": 60
   }
 }
